; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sh/boards/mach-se/770x/extr_io.c_se_outb.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sh/boards/mach-se/770x/extr_io.c_se_outb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @se_outb(i8 zeroext %0, i64 %1) #0 {
  %3 = alloca i8, align 1
  %4 = alloca i64, align 8
  store i8 %0, i8* %3, align 1
  store i64 %1, i64* %4, align 8
  %5 = load i64, i64* %4, align 8
  %6 = call i64 @shifted_port(i64 %5)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %15

8:                                                ; preds = %2
  %9 = load i8, i8* %3, align 1
  %10 = zext i8 %9 to i32
  %11 = shl i32 %10, 8
  %12 = trunc i32 %11 to i8
  %13 = load i64, i64* %4, align 8
  %14 = call i8* @port2adr(i64 %13)
  store i8 %12, i8* %14, align 1
  br label %19

15:                                               ; preds = %2
  %16 = load i8, i8* %3, align 1
  %17 = load i64, i64* %4, align 8
  %18 = call i8* @port2adr(i64 %17)
  store i8 %16, i8* %18, align 1
  br label %19

19:                                               ; preds = %15, %8
  ret void
}

declare dso_local i64 @shifted_port(i64) #1

declare dso_local i8* @port2adr(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
